# counter

./: AUTHORS  COPYING  README.md  counter.desktop.in  meson.build  news.desktop.in
data/themes/: counter.edc  meson.build  news.edc  perms.sh
data/themes/images/: meson.build
src/: config.c  counter.h  main.c  meson.build  news.h
